[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nemici/slime.png" type="Texture" id=1]
[ext_resource path="res://slime.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.2872, 55.4905 )

[node name="slime" type="KinematicBody2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Timerrocket" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -60.5811, 54.3448 )
rotation = 2.49242

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 44.5449, -57.9084 )
rotation = 5.63913

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 56.1266, 54.3448 )
rotation = 0.671509

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( -54.4539, -55.1266 )
rotation = -2.35482
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timerrocket" to="." method="_on_Timerrocket_timeout"]
